--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,14 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.springframework.session', name: 'spring-session-data-redis', version: '1.3.1.RELEASE'
-    compile group: 'biz.paluch.redis', name: 'lettuce', version: '4.4.1.Final'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.3.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '1.5.8.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.8.RELEASE'
+    compile group: 'org.springframework.session', name: 'spring-session-data-redis', version: '1.3.3.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "1.5.8.RELEASE"
+    compile group: 'com.h2database', name:'h2', version: '1.3.156'
+    compile group: 'biz.paluch.redis', name: 'lettuce', version: '3.5.0.Final'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.5.8.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '1.5.8.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.8.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
